--- a/src/components/ui/primitives/AvatarFrame.module.css
+++ b/src/components/ui/primitives/AvatarFrame.module.css
@@ -14,6 +14,11 @@
     calc(var(--space-7) + var(--space-1) + 4vw),
     calc(var(--space-8) + var(--space-4))
   );
+  --avatar-size-xl: clamp(
+    calc(var(--space16) - var(--space-2)),
+    calc(var(--space16) + 8vw),
+    calc(var(--space16) + var(--space-8))
+  );
   --avatar-size: var(--avatar-size-md);
   --avatar-rim: calc(var(--space-2) / 2);
   --avatar-surface: hsl(var(--card) / 0.92);
@@ -55,6 +60,10 @@
 
 .sizeLg {
   --avatar-size: var(--avatar-size-lg);
+}
+
+.sizeXl {
+  --avatar-size: var(--avatar-size-xl);
 }
 
 .framelessSurface {
